alignment issue fix

--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -83,3 +83,7 @@
 :host ::ng-deep .p-dialog{
   width: 35vw !important;
 }
+
+.txt_algn_rgt{
+  text-align: right;
+}
